# job_parser

./: .env.sample  .gitignore  README.md  pyproject.toml
docs_eng/: README.md
saved_vacancies/: csv_vacancies.csv  json_vacancies.json
src/: api_classes.py  file_saver.py  main.py
src/abstract_classes/: abstract_api.py  abstract_saver.py
src/models/: vacancy.py
src/utils/: user_interaction.py  utils.py
